--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -73,5 +73,12 @@
     </li>
     {% endif %}
 
+    {% if sidebar.pdf %}
+    <li class="pdf"><i class="fas fa-file-pdf"></i>
+      <a href="{{ sidebar.pdf }}" target="_blank"> GET PDF</a>
+    </li>
+    {% endif %}
+
+
   </ul>
 </div><!--//contact-container-->
