--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -154,7 +154,7 @@ p {
 }
 
 .main-wrapper {
-    background: #fff;
+    background: #e8f4f8;
     padding: 60px;
     padding-right: 340px;
     .section-title {
@@ -272,3 +272,4 @@ p {
     }
 
 }
+
