--- a/_template/pdf.css
+++ b/_template/pdf.css
@@ -1,6 +1,9 @@
 @page {
   margin: 1cm; /* Set margin on each page */
   padding: 0cm; /* Set padding on each page */
-  size: Letter;
+  size: Letter;  
 }
+ .avatar {
+    display: none;
 
+}
