--- a/_sass/skins/_turquoise.scss
+++ b/_sass/skins/_turquoise.scss
@@ -1,10 +1,11 @@
 /* Turquoise variables */
 $theme-color: #4CAC9D;
-$text-color: #3F4650;
+$text-color: #666666;
 $text-color-secondary: #545E6C;
-$text-grey: #97AAC3;
+$text-grey: #666666;
 $divider: #e8e8e8;
 $lighter-grey: #ccc;
 $darker-grey: #666;
-$smoky-white: #f5f5f5;
+$smoky-white: #000000;
 $heart: #fb866a;
+
