--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -75,7 +75,7 @@
 
     {% if sidebar.pdf %}
     <li class="pdf"><i class="fas fa-file-pdf"></i>
-      <a href="{{ sidebar.pdf }}" target="_blank"> DOWNLOAD CV AS A PDF</a>
+      <a href="{{ sidebar.pdf }}" style="font-weight:bold; color:black;"  target="_blank"> DOWNLOAD CV AS PDF</a>
     </li>
     {% endif %}
 
